# PDS-Cassini

./: README.md
docs/: NASA - PDS Cassini Propeller Hunter C++ and Java Code Refactoring AssemblyDeploymentGuide.doc
docs/Algorithm writeups/: cassini_1_andresduque.docx  description.txt  description_16166_kphmd.txt
src/: CMakeLists.txt  common.h  commonarg.h  decisiontree.h  detectorexceptions.h  detectorutility.h  globalvariable.h  helper.cpp  helper.h  indextabparser.cpp  indextabparser.h  labelparser.cpp  labelparser.h  pdsimageparameters.cpp  pdsimageparameters.h  pdsimagereader.cpp  pdsimagereader.h  propellerdetect.cpp  propellerdetect.h  propellerdetector.h  randomforest.h  ringsubtractor.h  rng.h  simplematrix.h  stats.cpp  test.cpp  train.cpp  transformer.h  types.h
test_files/: PropellerTest  PropellerTrain  answer.txt  full_ground_truth.csv  full_index.lbl  full_index.tab  full_random_index.tab  local_index.lbl  local_index.tab  output_answer.txt  provisional_index.lbl  provisional_index.tab  quick_index.lbl  quick_index.tab  quick_index2.lbl  quick_index2.tab  random_test.sh  system_index.lbl  system_index.tab  test_data.txt  xaa.lbl  xaa.tab  xab.lbl  xab.tab
